--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 
         <a href="https://www.facebook.com/Jamedium"><i class="fa fa-facebook"></i></a>
         <a href="https://www.youtube.com/channel/UCOY9FofqBEnOayDVWwhH9ig"><i class="fa fa-youtube"></i></a>
-	<a href="mailto:jamediumbusiness@gmail.com" class="fa fa-envelope"></a>
+	<a href="mailto:jamediumbusiness@gmail.com"><i class="fa fa-envelope"></i></a>
   
         </div>
     </main>
