--- a/forms.html
+++ b/forms.html
@@ -66,7 +66,7 @@
                 <img src="photos/googleforms.png" alt="استبيان" width="80%" style="border-radius:40px;">
             </center>
             <div class="responsive-google-forms">
-                <iframe margin="auto" src="https://docs.google.com/forms/d/e/1FAIpQLSdIoPPEU2fFXu8dKEQU6XgPzebCwMMpkHBFFsVPZabYZ6RYPg/viewform?embedded=true" width="640" height="4102" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe margin="auto" src="https://docs.google.com/forms/d/e/1FAIpQLSdIoPPEU2fFXu8dKEQU6XgPzebCwMMpkHBFFsVPZabYZ6RYPg/viewform?embedded=true" onload="window.parent.scrollTo(0,0)" height="4402" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
     </main>
     
