--- a/sign.html
+++ b/sign.html
@@ -27,7 +27,7 @@
         <div class="line"></div>
       </div>
       <ul class="navbar">
-        <li><a class="navcont" href="">جميديوم</a></li>
+        <li><a class="navcont" href="index.html">جميديوم</a></li>
         <li><a class="navcont" href="news.html">اخبار</a></li>
         <li><a class="navcont" href="articles.html">مقالات</a></li>
         <li><a class="navcont" href="calc.html">الحاسبة</a></li>
