--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ theme_color="#0A4D4D">
         <li><a class="navcont" href="about.html">من نحن</a></li>
       </ul>
     </header>
-      <br>
+
+    <main class="content">
       <div class="center-content">
       	<p class="big-title">نقدم لك جديدنا:</p>
       	<p class="medium-title">
